--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -31,6 +31,9 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-3856. Instances of RunningJob class givs incorrect job tracking
     urls when mutiple jobs are submitted from same client jvm. (Eric Payne via
     sseth)
+
+    MAPREDUCE-3583. Change pid to String and stime to BigInteger in order to
+    avoid NumberFormatException caused by overflow.  (Zhihong Yu via szetszwo)
  
 Release 0.23.1 - 2012-02-08 
 
