MAPREDUCE-3877 Add a test to formalise the current state transitions of the yarn lifecycle
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1245913 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -13,7 +13,10 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-3854. Fixed and reenabled tests related to MR child JVM's           
     environmental variables in TestMiniMRChildTask. (Tom White via vinodkv)
 
-  OPTIMIZATIONS
+    MAPREDUCE-3877 Add a test to formalise the current state transitions
+    of the yarn lifecycle. (stevel)
+
+    OPTIMIZATIONS
 
   BUG FIXES
     MAPREDUCE-3862.  Nodemanager can appear to hang on shutdown due to lingering
