HADOOP-8057 hadoop-setup-conf.sh not working because of some extra spaces.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1290858 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -54,6 +54,9 @@ Release 0.23.2 - UNRELEASED
     HADOOP-8046 Revert StaticMapping semantics to the existing ones, add DNS
     mapping diagnostics in progress (stevel)
 
+    HADOOP-8057 hadoop-setup-conf.sh not working because of some extra spaces.
+    (Vinayakumar B via stevel)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
