--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -28,6 +28,8 @@ Release 0.23.2 - UNRELEASED
     HDFS-2907.  Add a conf property dfs.datanode.fsdataset.factory to make
     FSDataset in Datanode pluggable.  (szetszwo)
 
+    HDFS-2985. Improve logging when replicas are marked as corrupt. (todd)
+
   OPTIMIZATIONS
 
   BUG FIXES
