svn merge -c 1243690 from trunk for HDFS-2944.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1292622 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -57,6 +57,10 @@ Release 0.23.2 - UNRELEASED
 
     HDFS-2969. ExtendedBlock.equals is incorrectly implemented (todd)
 
+    HDFS-2944. Typo in hdfs-default.xml causes
+    dfs.client.block.write.replace-datanode-on-failure.enable to be mistakenly
+    disabled. (atm)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
