--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -10,24 +10,24 @@ Release 0.23.3 - UNRELEASED
 
   IMPROVEMENTS
 
-    MAPREDUCE-2887 due to HADOOP-7524 Change RPC to allow multiple protocols
-    including multuple versions of the same protocol (sanjay Radia)
+    MAPREDUCE-2887. Due to HADOOP-7524, change RPC to allow multiple protocols
+    including multuple versions of the same protocol (Sanjay Radia)
 
     MAPREDUCE-2934. MR portion of HADOOP-7607 - Simplify the RPC proxy cleanup
     process (atm)
 
-    HADOOP-7862   MR changes to work with HADOOP 7862: 
-    Move the support for multiple protocols to lower layer so that Writable,
-    PB and Avro can all use it (Sanjay)
-
-    MAPREDUCE-3740. Fixed broken mapreduce compilation after the patch for
-    HADOOP-7965. (Devaraj K via vinodkv) 
+    HADOOP-7862. MR changes to work with HADOOP 7862: Move the support for
+    multiple protocols to lower layer so that Writable, PB and Avro can all
+    use it (Sanjay Radia)
 
     MAPREDUCE-3909 Javadoc the Service interfaces (stevel)
 
   OPTIMIZATIONS
 
   BUG FIXES
+
+    MAPREDUCE-3740. Fixed broken mapreduce compilation after the patch for
+    HADOOP-7965. (Devaraj K via vinodkv) 
 
     MAPREDUCE-3818. Fixed broken compilation in TestSubmitJob after the patch
     for HDFS-2895. (Suresh Srinivas via vinodkv)
