--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -34,11 +34,6 @@ Release 0.23.3 - UNRELEASED
     HDFS-2647. Used protobuf based RPC for InterDatanodeProtocol, 
     ClientDatanodeProtocol, JournalProtocol, NamenodeProtocol. (suresh)
 
-    HDFS-2666. Fix TestBackupNode failure. (suresh)
-
-    HDFS-2663. Optional protobuf parameters are not handled correctly.
-    (suresh)
-
     HDFS-2661. Enable protobuf RPC for DatanodeProtocol. (jitendra)
 
     HDFS-2697. Move RefreshAuthPolicy, RefreshUserMappings, GetUserMappings 
@@ -53,11 +48,12 @@ Release 0.23.3 - UNRELEASED
   IMPROVEMENTS
 
     HDFS-2018. Move all journal stream management code into one place.
-               (Ivan Kelly via jitendra)
+    (Ivan Kelly via jitendra)
 
     HDFS-2223. Untangle depencencies between NN components (todd)
 
-    HDFS-2351 Change Namenode and Datanode to register each of their protocols seperately (Sanjay Radia)
+    HDFS-2351. Change Namenode and Datanode to register each of their protocols
+    seperately (sanjay)
 
     HDFS-2337. DFSClient shouldn't keep multiple RPC proxy references (atm)
  
@@ -74,19 +70,19 @@ Release 0.23.3 - UNRELEASED
 
     HDFS-2496. Separate datatypes for DatanodeProtocol. (suresh)
 
-    HDFS-2479 HDFS Client Data Types in Protocol Buffers (sanjay)
+    HDFS-2479. HDFS Client Data Types in Protocol Buffers (sanjay)
 
-    HADOOP-7862   Hdfs changes to work with HADOOP 7862: 
-    Move the support for multiple protocols to lower layer so that Writable,
-    PB and Avro can all use it (Sanjay)
+    HADOOP-7862. Hdfs changes to work with HADOOP-7862: Move the support for
+    multiple protocols to lower layer so that Writable, PB and Avro can all
+    use it. (sanjay)
 
-    HDFS-2597 ClientNameNodeProtocol in Protocol Buffers (sanjay)
+    HDFS-2597. ClientNameNodeProtocol in Protocol Buffers. (sanjay)
 
-    HDFS-2651 ClientNameNodeProtocol Translators for Protocol Buffers (sanjay)
+    HDFS-2651. ClientNameNodeProtocol Translators for Protocol Buffers. (sanjay)
 
     HDFS-2650. Replace @inheritDoc with @Override. (Hari Mankude via suresh).
 
-    HDFS-2669 Enable protobuf rpc for ClientNamenodeProtocol
+    HDFS-2669. Enable protobuf rpc for ClientNamenodeProtocol. (sanjay)
 
     HDFS-2801. Provide a method in client side translators to check for a 
     methods supported in underlying protocol. (jitendra)
@@ -98,9 +94,10 @@ Release 0.23.3 - UNRELEASED
 
   BUG FIXES
  
-    HDFS-2481 Unknown protocol: org.apache.hadoop.hdfs.protocol.ClientProtocol (sanjay)
+    HDFS-2481. Unknown protocol: org.apache.hadoop.hdfs.protocol.ClientProtocol.
+    (sanjay)
 
-    HDFS-2497 Fix TestBackupNode failure. (suresh)
+    HDFS-2497. Fix TestBackupNode failure. (suresh)
 
     HDFS-2499. RPC client is created incorrectly introduced in HDFS-2459.
     (suresh)
@@ -110,6 +107,10 @@ Release 0.23.3 - UNRELEASED
 
     HDFS-2532. TestDfsOverAvroRpc timing out in trunk (Uma Maheswara Rao G
     via todd)
+
+    HDFS-2666. Fix TestBackupNode failure. (suresh)
+
+    HDFS-2663. Optional protobuf parameters are not handled correctly. (suresh)
 
     HDFS-2694. Removal of Avro broke non-PB NN services. (atm)
 
