MAPREDUCE-3922. Fixed build to not compile 32bit container-executor binary by default on all platforms. Contributed by Hitesh Shah. svn merge --ignore-ancestry -c 1294446 ../../trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1294448 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -117,6 +117,9 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-3913. RM application webpage is unresponsive after 2000 jobs 
     (Jason Lowe via tgraves)
  
+    MAPREDUCE-3922. Fixed build to not compile 32bit container-executor binary
+    by default on all platforms. (Hitesh Shah via vinodkv)
+
 Release 0.23.1 - 2012-02-17 
 
   NEW FEATURES
