svn merge -c 1294808 trunk to branch 0.23 FIXES MAPREDUCE-3816 capacity scheduler web ui bar graphs for used capacity wrong (tgraves via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1294814 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -120,8 +120,11 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-3922. Fixed build to not compile 32bit container-executor binary
     by default on all platforms. (Hitesh Shah via vinodkv)
 
-    MAPREDUCE-3790 Broken pipe on streaming job can lead to truncated output for
+    MAPREDUCE-3790. Broken pipe on streaming job can lead to truncated output for
     a successful job (Jason Lowe via bobby)
+
+    MAPREDUCE-3816. capacity scheduler web ui bar graphs for used capacity wrong
+    (tgraves via bobby)
 
 Release 0.23.1 - 2012-02-17 
 
