MAPREDUCE-3931. Changed PB implementation of LocalResource to take locks so that race conditions don't fail tasks by inadvertantly changing the timestamps. Contributed by Siddarth Seth. svn merge --ignore-ancestry -c 1294970 ../../trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1294973 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -130,7 +130,11 @@ Release 0.23.2 - UNRELEASED
     task attempt without an assigned container. (Robert Joseph Evans via
     sseth)
 
-Release 0.23.1 - 2012-02-17 
+    MAPREDUCE-3931. Changed PB implementation of LocalResource to take locks
+    so that race conditions don't fail tasks by inadvertantly changing the
+    timestamps. (Siddarth Seth via vinodkv)
+
+Release 0.23.1 - 2012-02-17
 
   NEW FEATURES
 
