svn merge -c 1295061. Merge HADOOP-7940 into branch-0.23. (Csaba Miklos via harsh).
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1295064 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -88,6 +88,8 @@ Release 0.23.3 - UNRELEASED
 
     HADOOP-8104. Inconsistent Jackson versions (tucu)
 
+    HADOOP-7940. The Text.clear() method does not clear the bytes as intended. (Csaba Miklos via harsh)
+
 Release 0.23.2 - UNRELEASED 
 
   NEW FEATURES
