svn merge -c 1295147 trunk to branch 23 FIXES MAPREDUCE-3687.  If AM dies before it returns new tracking URL, proxy redirects to http://N/A/ and doesn't return error code (Ravi Prakash via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1295149 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -134,6 +134,10 @@ Release 0.23.2 - UNRELEASED
     so that race conditions don't fail tasks by inadvertantly changing the
     timestamps. (Siddarth Seth via vinodkv)
 
+    MAPREDUCE-3687.  If AM dies before it returns new tracking URL, proxy
+    redirects to http://N/A/ and doesn't return error code (Ravi Prakash via
+    bobby)
+
 Release 0.23.1 - 2012-02-17
 
   NEW FEATURES
