--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -92,6 +92,9 @@ Release 0.23.3 - UNRELEASED
 
     HADOOP-7940. The Text.clear() method does not clear the bytes as intended. (Csaba Miklos via harsh)
 
+    HADOOP-8119. Fix javac warnings in TestAuthenticationFilter in hadoop-auth.
+    (szetszwo)
+
 Release 0.23.2 - UNRELEASED 
 
   NEW FEATURES
