HDFS-3038. Add FSEditLog.metrics to findbugs exclude list. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1296021 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -138,6 +138,8 @@ Release 0.23.3 - UNRELEASED
 
     HDFS-3020. Fix editlog to automatically sync when buffer is full. (todd)
 
+    HDFS-3038. Add FSEditLog.metrics to findbugs exclude list. (todd via atm)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
