MAPREDUCE-3009. Fixed node link on JobHistory webapp. Contributed by Chackaravarthy. svn merge --ignore-ancestry -c 1297149 ../../trunk/
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1297150 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -179,6 +179,9 @@ Release 0.23.2 - UNRELEASED
     using capacity and not max-capacity since we are already scaling it by
     userLimitFactor. (Eric Payne via acmurthy) 
 
+    MAPREDUCE-3009. Fixed node link on JobHistory webapp. (chackaravarthy via 
+    vinodkv)
+
 Release 0.23.1 - 2012-02-17
 
   NEW FEATURES
