--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -185,6 +185,9 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-3009. Fixed node link on JobHistory webapp. (chackaravarthy via 
     vinodkv)
 
+    MAPREDUCE-3964. ResourceManager does not have JVM metrics (Jason Lowe via
+    bobby)
+
 Release 0.23.1 - 2012-02-17
 
   NEW FEATURES
