svn merge -c 1297274 from trunk to branch-0.23 FIXES HADOOP-8064. Remove unnecessary dependency on w3c.org in document processing (Khiwal Lee via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1297275 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -175,6 +175,9 @@ Release 0.23.2 - UNRELEASED
     HADOOP-8123. Use java.home rather than env.JAVA_HOME for java in the
     project. (Jonathan Eagles via acmurthy) 
 
+    HADOOP-8064. Remove unnecessary dependency on w3c.org in document processing
+    (Khiwal Lee via bobby)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
