svn merge -c 1297557 from trunk to branch-0.23 FIXES: MAPREDUCE-3976. TestRMContainerAllocator failing (Jason Lowe via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1297558 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -194,6 +194,8 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-3034. Ensure NodeManager reboots itself on direction from
     ResourceManager. (Devaraj K & Eric Payne via acmurthy) 
 
+    MAPREDUCE-3976. TestRMContainerAllocator failing (Jason Lowe via bobby)
+
 Release 0.23.1 - 2012-02-17
 
   NEW FEATURES
