HADOOP-8142. Update versions from 0.23.2 to 0.23.3 in the build files.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1297650 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -68,6 +68,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8125. make hadoop-client set of curated jars available in a
     distribution tarball (rvs via tucu)
 
+    HADOOP-8142. Update versions from 0.23.2 to 0.23.3 in the build files.
+    (szetszwo)
+
   OPTIMIZATIONS
 
   BUG FIXES
