--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -200,6 +200,9 @@ Release 0.23.2 - UNRELEASED
 
     MAPREDUCE-3976. TestRMContainerAllocator failing (Jason Lowe via bobby)
 
+    MAPREDUCE-3961. Map/ReduceSlotMillis computation incorrect (Siddharth Seth
+    via bobby)
+
 Release 0.23.1 - 2012-02-17
 
   NEW FEATURES
