svn merge -c 1297796 from trunk to branch-0.23 FIXES: MAPREDUCE-3977. LogAggregationService leaks log aggregator objects (Jason Lowe via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1297797 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -203,6 +203,9 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-3961. Map/ReduceSlotMillis computation incorrect (Siddharth Seth
     via bobby)
 
+    MAPREDUCE-3977. LogAggregationService leaks log aggregator objects
+    (Jason Lowe via bobby)
+
 Release 0.23.1 - 2012-02-17
 
   NEW FEATURES
