--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -206,6 +206,9 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-3977. LogAggregationService leaks log aggregator objects
     (Jason Lowe via bobby)
 
+    MAPREDUCE-3975. Default value not set for Configuration parameter
+    mapreduce.job.local.dir (Eric Payne via bobby)
+
 Release 0.23.1 - 2012-02-17
 
   NEW FEATURES
