--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -98,6 +98,8 @@ Release 0.23.3 - UNRELEASED
     HDFS-3030. Remove getProtocolVersion and getProtocolSignature from 
     translators. (jitendra)
 
+    HDFS-2158. Add JournalSet to manage the set of journals. (jitendra)
+
   OPTIMIZATIONS
 
   BUG FIXES
