HDFS-2188. Merging change r1185354 from trunk to 0.23
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1297857 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -142,6 +142,9 @@ Release 0.23.3 - UNRELEASED
 
     HDFS-3038. Add FSEditLog.metrics to findbugs exclude list. (todd via atm)
 
+    HDFS-2188. Make FSEditLog create its journals from a list of URIs rather 
+    than NNStorage. (Ivan Kelly via jitendra)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
