--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -100,6 +100,8 @@ Release 0.23.3 - UNRELEASED
 
     HDFS-2158. Add JournalSet to manage the set of journals. (jitendra)
 
+    HDFS-2334. Add Closeable to JournalManager. (Ivan Kelly via jitendra)
+
   OPTIMIZATIONS
 
   BUG FIXES
